# tank-c2

./: CLAUDE.md  deploy_fresh.py  deploy_phase4.py  mjpeg_bridge.py  package-lock.json  package.json  server.js  setup_jetson.sh
arduino/PTU_WHEEL_IMU_ETH_COM/: PTU_WHEEL_IMU_ETH_COM.ino
arduino/tank_sensor_teensy/: tank_sensor_teensy.ino
docs/: config_reference.html  deploy_quickstart.html  index.html  protocol_reference.html  teensy_wiring.html  troubleshooting.html
jetson/: 99-tank-cameras.rules  CMakeLists.txt  behavior_coordinator.cpp  comms.cpp  config.json  ekf_params.yaml  follow_behavior.cpp  logger.cpp  main.cpp  mission.cpp  mission_behavior.cpp  movement.cpp  nav2_params.yaml  nav2_planner.cpp  nav2_planner_launch.py  object_detection.cpp  runtime_config.cpp  sensor_store.cpp  slam_bridge.py  slam_link.cpp  slam_start.sh  slam_toolbox_params_no_odom.yaml  slam_toolbox_params_odom.yaml  start_tank.sh  stereo_depth.cpp  system_monitor.cpp  teensy_link.cpp
jetson/include/: behavior.h  behavior_coordinator.h  common.hpp  comms.h  config.h  control_mode.h  follow_behavior.h  helpers.h  logger.h  mission.h  mission_behavior.h  movement.h  nav2_planner.h  object_detection.h  obstacle_utils.h  path_planner.h  runtime_config.h  sensor_store.h  slam_link.h  stereo_depth.h  system_monitor.h  teensy_link.h  yolov8.hpp
public/: index.html  login.html
public/css/: main.css
public/docs/: config_reference.html  deploy_quickstart.html  index.html  protocol_reference.html  teensy_wiring.html  troubleshooting.html
public/js/: app.js  controls.js  dashboard.js  mission.js  widgets.js
